--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ h4 {
   padding: 10px;
   border-radius: 5px;
   color: #cccccc;
+  margin-bottom: 0;
 }
 
 hr {
@@ -100,7 +101,6 @@ ul {
   background-color: #181818;
   padding: 20px;
   margin: 10px 0;
-  width: auto;
 }
 
 .header {
@@ -124,22 +124,15 @@ ul {
   align-items: center;
 }
 
-.project-container {
+.detail-container {
   display: flex;
 }
 
-.project-container img {
+.detail-container img {
   border-radius: 5px;
   display: block;
   margin: 10px 0;
   margin-left: 20px;
-}
-
-.section {
-  background-color: #181818;
-  padding: 20px;
-  margin: 10px 0;
-  width: 100%;
 }
 
 @media screen and (max-width: 600px) {
@@ -164,6 +157,10 @@ ul {
   }
 
   .content {
+    width: auto;
+  }
+
+  .detail {
     width: auto;
   }
 
@@ -199,9 +196,10 @@ ul {
 
   .detail {
     border-radius: 5px;
+    width: 100%;
   }
 
-  .project-container img {
+  .detail-container img {
     border-radius: 5px;
     width: 256px;
     height: 256px;
@@ -215,11 +213,11 @@ ul {
 }
 
 @media screen and (max-width: 1000px) {
-  .project-container {
+  .detail-container {
     flex-direction: column;
   }
 
-  .project-container img {
+  .detail-container img {
     width: 90%;
     height: auto;
     margin: 20px auto;
